Fix test failures (#1676)
- Fixed intermittent test failures in `GrpcServiceServerTest`.
  - Made sure all `RequestLog`s are consumed by each test method.
  - Fixes #1581
  - Fixes #1602
- Fixed Spring Boot integration example tests.
  - Made sure an ephemeral port is used for testing.
  - Fixes #1640
- Added more assertions to `RequestContextTest`
  - Closes #1598
- Used `await().untilAsserted()` in `RequestContext` instead of
  waiting for an event loop to shut down completely.